--- a/package.json
+++ b/package.json
@@ -78,6 +78,10 @@
     "overrides": {
       "esbuild@<=0.24.2": ">=0.25.0",
       "glob@>=10.2.0 <10.5.0": ">=10.5.0"
-    }
+    },
+    "onlyBuiltDependencies": [
+      "esbuild",
+      "unrs-resolver"
+    ]
   }
 }
